@@ -10,6 +10,8 @@
 	svyolr() using linearisation had the wrong standard errors for intercepts
 	other than the first, if extracted using vcov (it was correct in summary() output)
 
+	svyglm() gave deffs that were too large by a factor of nrow(design). (Adrianne Bradford)
+
 
 4.0	Some (and eventually nearly all) functions now return influence functions when
 	called with a survey.design2 object and the influence=TRUE option.  These allow
